# katrix

./: .gitmodules  CMakeLists.txt  README.md  build.sh
src/: active_object.hpp  helper.hpp  katrix.cpp  katrix.hpp  main.cpp  server.cpp  server.hpp
